--- a/supervisor.webvirtmgr.conf
+++ b/supervisor.webvirtmgr.conf
@@ -1,6 +1,6 @@
 [program:webvirtmgr]
-command=/bin/sh -c "/webvirtmgr/bootstrap.sh && /usr/bin/python /webvirtmgr/manage.py run_gunicorn -c /webvirtmgr/conf/gunicorn.conf.py"
-directory=/webvirtmgr
+command=/usr/bin/python /opt/webvirtmgr/manage.py run_gunicorn -c /opt/webvirtmgr/conf/gunicorn.conf.py
+directory=/opt/webvirtmgr
 autostart=true
 autorestart=true
 stdout_logfile=NONE
@@ -8,8 +8,8 @@ stderr_logfile=NONE
 user=webvirtmgr
 
 [program:webvirtmgr-console]
-command=/usr/bin/python /webvirtmgr/console/webvirtmgr-console
-directory=/webvirtmgr
+command=/usr/bin/python /opt/webvirtmgr/console/webvirtmgr-console
+directory=/opt/webvirtmgr
 autostart=true
 autorestart=true
 stdout_logfile=NONE
